[sit727] update db configuration

--- a/config/db/db-statefulSets.yaml
+++ b/config/db/db-statefulSets.yaml
@@ -58,5 +58,4 @@ spec:
         resources:
           requests:
             storage: 300Gi
-        # storageClassName: demo-storage
-        storageClassName: standard
+        storageClassName: demo-storage
