[sit727] update app config

--- a/config/chat-app/01_secret.yaml
+++ b/config/chat-app/01_secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: app-auth
+  name: chat-app
 data:
   mongo-root-username: cm9vdA== # root
   mongo-root-password: cGFzc3dvcmQ=  # password // echo -n 'password' | base64
