--- a/config/chat-app/04_hpa.yaml
+++ b/config/chat-app/04_hpa.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: ecommerce-super-pets
+  name: chat-app
 spec:
   maxReplicas: 5
   minReplicas: 1
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: ecommerce-super-pets
+    name: chat-app
   targetCPUUtilizationPercentage: 20
