--- a/config/chat-app/02_service.yaml
+++ b/config/chat-app/02_service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ecommerce-super-pets
+  name: chat-app
   labels:
-    app: ecommerce-super-pets
+    app: chat-app
 spec:
   type: NodePort
   selector:
-    app: ecommerce-super-pets
+    app: chat-app
   ports:
     - name: http
       port: 80
