--- a/config/chat-app/03_serviceAccount.yaml
+++ b/config/chat-app/03_serviceAccount.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ecommerce-super-pets
+  name: chat-app
   labels:
-    app: ecommerce-super-pets
+    app: chat-app
