[sit727] update app config

--- a/config/chat-app/05_deployment.yaml
+++ b/config/chat-app/05_deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       serviceAccountName: chat-app
       containers:
-        - name: ecommerce
+        - name: chat-app
           image: chrisyp/sit727-72hd:v1
           ports:
             - name: http
