--- a/config/chat-app/01_configMap.yaml
+++ b/config/chat-app/01_configMap.yaml
@@ -5,4 +5,5 @@ metadata:
   labels:
     app: chat-app
 data:
-  MONGO_HOSTS: "mongodb-rs-0.mongodb-rs.default.svc.cluster.local:27017，mongodb-rs-1.mongodb-rs.default.svc.cluster.local:27017，mongodb-rs-2.mongodb-rs.default.svc.cluster.local:27017"
+  MONGO_HOSTS: "mongodb-rs-0.mongodb-rs.default.svc.cluster.local:27017,mongodb-rs-1.mongodb-rs.default.svc.cluster.local:27017,mongodb-rs-2.mongodb-rs.default.svc.cluster.local:27017"
+  MONGO_REPLICA_SET: "rs0"
