--- a/config/chat-app/01_secret.yaml
+++ b/config/chat-app/01_secret.yaml
@@ -5,3 +5,11 @@ metadata:
 data:
   mongo-root-username: cm9vdA== # root
   mongo-root-password: cGFzc3dvcmQ=  # password // echo -n 'password' | base64
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: chat-app-token
+  annotations:
+    kubernetes.io/service-account.name: chat-ap
+type: kubernetes.io/service-account-token
