[sit727] update app conf

--- a/config/chat-app/01_secret.yaml
+++ b/config/chat-app/01_secret.yaml
@@ -11,5 +11,5 @@ kind: Secret
 metadata:
   name: chat-app-token
   annotations:
-    kubernetes.io/service-account.name: chat-ap
+    kubernetes.io/service-account.name: chat-app
 type: kubernetes.io/service-account-token
