[sit727] update health probes

--- a/config/chat-app/05_deployment.yaml
+++ b/config/chat-app/05_deployment.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: chat-app
       containers:
         - name: chat-app
-          image: chrisyp/sit727-72hd:v1
+          image: chrisyp/sit727-72hd:v2
           ports:
             - name: http
               containerPort: 8080
@@ -54,13 +54,13 @@ spec:
               memory: 50Mi
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
             initialDelaySeconds: 10
             periodSeconds: 20
