[sit727] update app config

--- a/config/chat-app/05_deployment.yaml
+++ b/config/chat-app/05_deployment.yaml
@@ -66,7 +66,7 @@ spec:
             periodSeconds: 20
 
         - name: envoy
-          image: luksa/kubia-ssl-proxy:1.0
+          image: chrisyp/envoy-websocket:v1
           ports:
             - name: https
               containerPort: 8443
