--- a/config/envoy/Dockerfile
+++ b/config/envoy/Dockerfile
@@ -1,2 +1,3 @@
-FROM envoyproxy/envoy:v1.28-latest
+FROM envoyproxy/envoy:v1.23-latest
 COPY envoy.yaml /etc/envoy/envoy.yaml
+CMD ["/usr/local/bin/envoy", "-c", "/etc/envoy/envoy.yaml"]
