--- a/config/chat-app/02_service.yaml
+++ b/config/chat-app/02_service.yaml
@@ -1,20 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chat-app
+  name: chat-app-service
   labels:
     app: chat-app
 spec:
-  sessionAffinity: ClientIP
-  type: NodePort
   selector:
     app: chat-app
   ports:
     - name: http
       port: 80
-      protocol: TCP
-      targetPort: http
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: https
+      targetPort: 8080
