--- a/config/chat-app/02_ingress.yaml
+++ b/config/chat-app/02_ingress.yaml
@@ -1,15 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: chat-app
+  name: chat-app-ingress
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    nginx.ingress.kubernetes.io/enable-websocket: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
+    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
 spec:
+  ingressClassName: public
   rules:
-    - host: chat.local
+    - host: chat-app.local
       http:
         paths:
           - path: /
