[sit727] update ingress

--- a/config/chat-app/02_ingress.yaml
+++ b/config/chat-app/02_ingress.yaml
@@ -8,6 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
     nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+    nginx.ingress.kubernetes.io/enable-websocket: "true"
 spec:
   ingressClassName: public
   rules:
