--- a/config/chat-app/02_service.yaml
+++ b/config/chat-app/02_service.yaml
@@ -5,10 +5,16 @@ metadata:
   labels:
     app: chat-app
 spec:
+  sessionAffinity: ClientIP
   type: NodePort
   selector:
     app: chat-app
   ports:
     - name: http
       port: 80
-      targetPort: 8080
+      protocol: TCP
+      targetPort: http
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: https
