--- a/config/chat-app/02-service.yaml
+++ b/config/chat-app/02-service.yaml
@@ -6,7 +6,7 @@ metadata:
     app: chat-app
 spec:
   sessionAffinity: ClientIP
-  type: NodePort
+  type: ClusterIP
   selector:
     app: chat-app
   ports:
@@ -14,7 +14,3 @@ spec:
       port: 80
       protocol: TCP
       targetPort: http
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: https
